--- a/webpage.html
+++ b/webpage.html
@@ -12,7 +12,7 @@
   <link rel="canonical" href="https://www.curricula.com/">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Security Awareness Training For Employees">
+  <meta property="og:title" content="Julies teaching page test">
   <meta property="og:description" content="Security Awareness Training for employees delivered using short relatable stories about actual cyber attacks.">
   <meta property="og:url" content="https://www.curricula.com/">
   <meta property="og:site_name" content="Curricula">
