--- a/webpage.html
+++ b/webpage.html
@@ -7,19 +7,19 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Múinteoir Julie's Teaching page</title>
 
-  <meta name="description" content="Test website for Múinteoir Julies teaching page.">
+  <meta name="description" content="Múinteoir Julie's teaching page.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://hodge-the-third.github.io/Test-webpage/webpage">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Test website">
-  <meta property="og:description" content="Test website for Múinteoir Julies teaching page.">
+  <meta property="og:description" content="Múinteoir Julie's teaching page.">
   <meta property="og:url" content="https://hodge-the-third.github.io/Test-webpage/webpage/">
   <meta property="og:site_name" content="Múinteoir Julie">
   <meta property="article:modified_time" content="2021-3-4T20:00:00+00:00">
   <meta property="og:image" content="https://github.com/Hodge-the-third/Test-webpage/blob/main/images/Julie%20Logo.png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Test website for Múinteoir Julies teaching page.">
+  <meta name="twitter:title" content="Múinteoir Julie's teaching page.">
   <meta name="twitter:description" content="Múinteoir Julies teaching page test.">
   <meta name="twitter:image" content="https://github.com/Hodge-the-third/Test-webpage/blob/main/images/Julie%20Logo.png">
   <script type="text/javascript" async="" src="https://www.googleadservices.com/pagead/conversion_async.js"></script>
