resource page plus wepage edits

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body class="antialiased overflow-x-hidden">
   <div id="app" x-data="{ signup: false, phishing: false, interests: 'episode_content', resourcesMenuOpen: false, mobileMenuOpen: false }">
     <div class="relative">
-      <div class="relative" style="background:linear-gradient(150deg,#cc8199 15%,#d14572 70%,#d14572 94%)">
+      <div class="relative" style="background:linear-gradient(150deg,#cc8199 15%,#d14572 70%,#a8395d 94%)">
         <div class="container mx-auto relative opacity-25 z-0">
           <div class="relative opacity-50">
             <div class="w-full h-56 rounded-l-lg left-0 -ml-48 sm:-ml-56 -mt-20 opacity-25  transform -rotate-45 bg-red-200 absolute -mt-48"></div>
@@ -84,7 +84,7 @@
           <div class="xl:container mx-auto relative">
             <div class="relative z-50">
               <div class="max-w-7xl mx-auto px-4 sm:px-6">
-                <div class="flex justify-between items-center h-20 sm:h-24 md:h-28 lg:justify-start md:space-x-10">
+                <div class="flex justify-between items-center h-20 sm:h-24 md:h-28 lg:justify-start space-x-5 md:space-x-10">
                   <div class="lg:w-20 lg:flex-1 flex items-center">
                     <a href="/" class="inline-flex items-center h-10">
                       <img class="h-24 w-24" src="images\Julie Logo.png" alt="Múinteoir Julie" style="">
@@ -97,7 +97,7 @@
                       </svg>
                     </button>
                   </div>
-                  <nav class="hidden md:flex space-x-8 lg:space-x-12 h-full items-center">
+                  <nav class="hidden md:flex space-x-1 md:space-x-2 lg:space-x-6 xl:space-x-8 h-full items-center">
                     <a href="/partners" class="text-s lg:text-base leading-6 pr-1 opacity-75 hover:opacity-100 font-bold text-gray-200 hover:text-gray-100 focus:text-gray-100 focus:outline-none transition ease-in-out duration-150">
                       News
                     </a>
@@ -369,7 +369,7 @@
               </div>
             </div>
           </div>
-          <div class="absolute right-8 bottom-0 block hidden md:hidden lg:block xl:block">
+          <div class="absolute right-0 bottom-0 block hidden md:hidden lg:block xl:block">
             <img src="images\teacher-blackboard-hello-class.png" class="h-full w-full">
           </div>
         </div>
